Čtení z teplotního čidla.

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,4 +1,4 @@
-idf_component_register(SRCS "zalevaci-nadrz.c" "blikaniled.c" "lcd-demo.c" "prutokomer-demo.c"
+idf_component_register(SRCS "zalevaci-nadrz.c" "blikaniled.c" "lcd-demo.c" "prutokomer-demo.c" "teplota-demo.c"
                     INCLUDE_DIRS "."
-                    REQUIRES esp_driver_gpio
+                    REQUIRES esp_driver_gpio onewire
                     PRIV_REQUIRES esp_timer)
